--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "vite": "^6.0.5"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/monteslu/simple-jsgame-starter"
+  },
   "license": "MIT"
 }
